<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ImageView
        android:id="@+id/btn_shut_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/baseline_cancel_24"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/btn_shut_down_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/txt_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/liar_game"
        android:textColor="@color/white"
        android:fontFamily="@font/nanumpen"
        android:textSize = "60sp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/setting_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_main">
        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">
            <ImageView
                android:id="@+id/btn_people_down"
                android:layout_marginTop="21dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/baseline_arrow_left_24"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/left_btn_image" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/people_num"
                    android:textSize="30sp"
                    android:fontFamily="@font/nanumpen"
                    android:textColor="@color/white"/>
                <TextView
                    android:layout_gravity="center"
                    android:id="@+id/peoplecount"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/md"
                    android:textColor="@color/white"
                    android:fontFamily="@font/nanumpen"
                    tools:text="3" />
            </LinearLayout>
            <ImageView
                android:id="@+id/btn_people_up"
                android:layout_marginTop="21dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/baseline_arrow_right_24"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/btn_right_image" />
        </LinearLayout>

    </LinearLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_main_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:backgroundTint="@color/main_color"
        android:textColor="@color/white"
        android:fontFamily="@font/nanumpen"
        android:layout_marginBottom="50dp"
        android:textSize="@dimen/lg"
        app:cornerRadius="30dp"
        app:strokeWidth="2dp"
        app:strokeColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>